refactor: MedicalOcr 추가 기준을 이름 + 매칭으로 변경
- 이름 일부 일치 입력, 없으면 user의 petId 1로 fallback

- 프론트에서 레코드를 그룹화해서 보여주도록 로직 변경